Create REST API for validating BPs. POST to /brokerPolicy/validate. Added Jena libs in webapp and exporting PolicyCompletenessCompliance project also.

--- a/org.seerc.brokeratcloud.webservice/.settings/org.eclipse.wst.common.component
+++ b/org.seerc.brokeratcloud.webservice/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <dependent-module archiveName="MessageBroker.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/MessageBroker/MessageBroker">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="PolicyCompletenessCompliance.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/PolicyCompletenessCompliance/PolicyCompletenessCompliance">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/org.seerc.brokeratcloud.webservice/build/classes"/>
         <property name="context-root" value="org.seerc.brokeratcloud.webservice"/>
     </wb-module>
